--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
   --searching-focus-color: #7e6ce4;
   --searching-hover-color: rgb(96, 86, 203);
   --delete-border-color: rgb(255, 249, 249);
+  --nav-box-color: rgb(101 101 101 / 21%);
   --edit-color: #c9ffda;
   --bg-hover-color: #2196f3;
   --bg-delete-color: #ec4811;
@@ -94,11 +95,11 @@ html {
   border-bottom-right-radius:15px;
    border-bottom-left-radius:15px;
   background:linear-gradient(white,#a167ff);
-  color: white;
+  color: var(--white-color);
   font-family: 'Montserrat', sans-serif;
-  box-shadow: 20px 20px 50px rgb(101 101 101 / 21%);
+  box-shadow: 20px 20px 50px var(--nav-box-color);
  
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
+  border-right: 1px solid var(--navbar-border-color);
   backdrop-filter: blur(5px);
   z-index: 15;
 }
@@ -148,7 +149,7 @@ html {
   text-decoration: none;
   font-family:'Fuzzy Bubbles',cursive,'Indie Flower', cursive,'Island Moments', cursive,Georgia, 'Times New Roman', Times, serif;
   font-size: 1.5rem;
-  color:black;
+  color:var(--black-color);
 }
 
 #container {
